fixed up spacing in submission cards

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -124,6 +124,7 @@
   margin-right: 50px;
   display: flex;
   flex-direction: column;
+  padding-top: 2em;
 }
 
 .user-in-progress {
